@@ -19,8 +19,9 @@ Released: xx/xx/2008
     - Lua (Function Definitions)
     - Nullsoft Installer Scripts (Defines, Functions, Sections)
     - Perl (Packages, Subroutine Declarations, Subroutine Definitions)
+    - Php (Classes, Class Variables, Class Methods, Functions)
     - Python (Classes, Class/Global Variables, Function Definitions)
     - Shell Scripts (Function Definitions)
     - Tcl/Tk (Procedure Definitions)
   + Instant navigation to an items definition by double clicking on it
-  + Tree organized by type and scope of object
+  + Tree organized alphabetically by type and scope of object
